2017-01-23  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpcofflink.c,
    gplink/testsuite/gplink.project/hexfiles/reloc12.hex,
    gplink/testsuite/gplink.project/asmfiles/reloc14_1.asm,
    gplink/testsuite/gplink.project/hexfiles/reloc14.hex:
    Applied this patch: "#70 gplink: preserve destination for low relocations"
    Thanks to Martin Habets.

2017-01-21  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c:
    Applied this patch: "#69 Fix quoting in .assert directive"
    Thanks to Martin Habets.

  * gpasm/testsuite/gpasm.project/objasm/op16.asm,
    gpasm/testsuite/gpasm.project/objfiles/op16.o:
    Fixed the parameters of movfp and movpf instructions.

2017-01-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure, configure.ac:
    More compiler warning options.

2017-01-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure, configure.ac:
    More compiler warning options.

  * gpasm/directive.c, gpasm/gpmsg.c, gpasm/special.c:
    More and talkative warning and error messages.
    Fixed this bug: "#301 GPASM warning message badly formatted"
    Thanks to Philippe Paternotte for the report.

  * libgputils/gpdis.c, libgputils/gplist.c, libgputils/gpsystem.c:
    More debug info.

  * gpasm/gpmsg.c, gpasm/gpmsg.h, libgputils/gpmessage.c,
    libgputils/gpmessage.h, libgputils/gpsystem.c,
    libgputils/gpsystem.h, libgputils/gpwritehex.c,
    libgputils/gpwritehex.h:
    Code formatting.

2016-12-29  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure, configure.ac:
    More clang warning options.

  * gpasm/preprocess.c, gpasm/scan.l, gpasm/util.c, gplink/gplink.c,
    libgputils/gpdis.c:
    Eliminated the compiler warnings.

  * libgputils/gpcofflink.c:
    More information about the missing symbols.
    Bug: "#300 GPLINK fails with assertion error"
    Thanks to James Dunne for the report.

  * libgputils/gpmessage.c, libgputils/gpmessage.h: