@@ -271,7 +271,7 @@ gp_archive_extract_member(gp_archive_t *Archive, const char *Object_name)
   /* if the object doesn't have an extension, add one.  This is done for
      some libs generated with other tools.  It should not be necessary
      for libs generated by gplib. */
-  snprintf(file_name, sizeof(file_name), "%s%s", Object_name, (strrchr(file_name, '.') == NULL) ? ".o" : "");
+  snprintf(file_name, sizeof(file_name), "%s%s", Object_name, (strrchr(Object_name, '.') == NULL) ? ".o" : "");
 
   output_file = fopen(file_name, "wb");
   if (output_file == NULL) {
