@@ -1,3 +1,10 @@
+2017-02-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * libgputils/gparchive.c:
+    Bugfix: Archive extract member.
+
+  * gplink/gplink.c:
+    Small code cleaning.
+
 2017-01-23  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * libgputils/gpcofflink.c,
     gplink/testsuite/gplink.project/hexfiles/reloc12.hex,
